@@ -20,3 +20,5 @@
 10-19 | Sprint 2 | Method class created
 10-21 | Sprint 2 | Dependence class created
 10-23 | Sprint 2 | Wrote dependency reading functionality (yet to be tested)
+10-27 | Sprint 2 | Product sponsors given access to ChangeLog.txt on GitHub
+10-27 | Sprint 2 | Event Logger (Backend) created and implemented
